tests/resource/invalid/type/definition/nested_non_mut_field.mamba
class B
    def my_num: Int := 10

class A
    def fin b: B


def a := A()
a.b.my_num := 20
